--- a/Index.html
+++ b/Index.html
@@ -56,12 +56,12 @@
          <div class="col-md-6"> <!-- Inicio columna lavado ecologico -->
          <h3 align="center"> Lavado Ecologico </h3>
   <br>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Mínimo uso de agua. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Servicio a domicilio para mayor comodidad. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Máquinas autónomas de agua y energía. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Sin charcos ni desperdicios. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Productos de excelente calidad. </p>
-    <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Personal altamente capacitado. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Mínimo uso de agua. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Servicio a domicilio para mayor comodidad. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Máquinas autónomas de agua y energía. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Sin charcos ni desperdicios. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Productos de excelente calidad. </p>
+    <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Personal altamente capacitado. </p>
   </div> <!-- Fin columna lavado ecologico -->
            <div class="col-md-6"> <!-- Inicio columna lavado convencional -->
         <h3 align="center"> Lavado Convencional</h3>
