--- a/empresa.html
+++ b/empresa.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="img/auto.ico" />
+  <link rel="icon" type="image/x-icon" href="Img/auto.ico" />
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
        <!-- Google fonts-->
        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -21,7 +21,7 @@
   <!-- Inicio barra de Navegacion-->
           <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
               <div class="container">
-                  <a class="navbar-brand js-scroll-trigger" href="index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+                  <a class="navbar-brand js-scroll-trigger" href="Index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                   <div class="collapse navbar-collapse" id="navbarResponsive">
                       <ul class="navbar-nav ml-auto">
                           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="empresa.html">Empresa</a></li>
