--- a/empresa.html
+++ b/empresa.html
@@ -70,14 +70,14 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
               <div class="row">
                 <div class="col-md-6">
                   <br>
-                  <img class="rounded-sm mision mb-3" src="img/mision.png" img-responsive alt=""/>
+                  <img class="rounded-sm mision mb-3" src="Img/mision.png" img-responsive alt=""/>
                   <h1 align="center"> Misión </h1>
         <p style="text-align: justify;">Proporcionar a nuestros clientes de empresas, conjuntos o socios un autolavado ecológico, amigo del medio ambiente usando productos de calidad y biodegradable, con un personal altamente idóneo,
           que no olvida los valores de la responsabilidad y amabilidad. De esta manera aseguramos la satisfacción total del cliente al contratar cada uno de nuestros servicios. </p>
                 </div>
                 <div class="col-md-6">
                   <br>
-                  <img class=" rounded-sm vision mb-3" src="img/vision.png" img-responsive alt=""/>
+                  <img class=" rounded-sm vision mb-3" src="Img/vision.png" img-responsive alt=""/>
                     <h1 align="center"> Visión</h1>
                     <p style="text-align: justify;">Para el año 2030 queremos ser una de las empresas líderes en autolavado de vehículos a domicilio  y que nuestros clientes nos reconozcan por la responsabilidad amabilidad ambiental y calidad con la que prestamos nuestros servicios. </p>
                 </div>
@@ -95,7 +95,7 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
               <br>
               <h1 align="center"> Que hacemos</h1>
               <br>
-              <img class="info mb-5" src="img/Info.png" alt=""/>
+              <img class="info mb-5" src="Img/Info.png" alt=""/>
 <p style="text-align: justify;"> En Easy Car Wash, recibimos tu vehículo que ha sufrido
   los efectos de la suciedad que esta en el ambiente y utilizamos técnicas totalmente amigables con
   el ambiente para dejarlo reluciente. </p>
@@ -113,17 +113,17 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
             <h1 align="center"> Ventajas</h1>
             <div class="row">
               <div class="col-md-6">
-                <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40" /> Contamos con unidades móviles autónomas de agua y energía. </p>
-      <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40" /> Personal debidamente capacitado. </p>
-      <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Productos biodegradables de altísima calidad (Simoniz. 3M). </p>
-      <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40" /> Novedosa tecnología que encapsula el polvo sin rayar la pintura. </p>
-      <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40" /> Lavamos su carro con solo 2 litros de agua. </p>
-      <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40" /> No generamos residuos sólidos ni líquidos por lo que no se van a generar exigencias por parte de los entes reguladores ambientales. </p>
-      <p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40" /> Le ayudamos a ahorrar tiempo y dinero. </p>
+                <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40" /> Contamos con unidades móviles autónomas de agua y energía. </p>
+      <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40" /> Personal debidamente capacitado. </p>
+      <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Productos biodegradables de altísima calidad (Simoniz. 3M). </p>
+      <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40" /> Novedosa tecnología que encapsula el polvo sin rayar la pintura. </p>
+      <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40" /> Lavamos su carro con solo 2 litros de agua. </p>
+      <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40" /> No generamos residuos sólidos ni líquidos por lo que no se van a generar exigencias por parte de los entes reguladores ambientales. </p>
+      <p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40" /> Le ayudamos a ahorrar tiempo y dinero. </p>
               </div>
               <div class="col-md-6">
                 <br>
-                <img class=" rounded-sm car1 mb-5" src="img/car1.png" img-responsive alt=""/>
+                <img class=" rounded-sm car1 mb-5" src="Img/car1.png" img-responsive alt=""/>
               </div>
             </div>
           </div>
