--- a/galeria.html
+++ b/galeria.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="img/auto.ico" />
+  <link rel="icon" type="image/x-icon" href="Img/auto.ico" />
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
        <!-- Google fonts-->
        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -35,7 +35,7 @@
         </nav> <!-- Fin barra de Navegacion-->
        <header class="masthead bg-primary text-white text-center"> <!--- Inicio Header --->
            <div class="container d-flex align-items-center flex-column">
-<!-- Logo --><img class="masthead-avatar mb-5" src="img/logo.png" alt="" /><!-- logo -->
+<!-- Logo --><img class="masthead-avatar mb-5" src="Img/logo.png" alt="" /><!-- logo -->
                <!-- Icono Divider-->
                <div class="divider-custom divider-light">
                    <div class="divider-custom-line"></div>
@@ -52,39 +52,39 @@
                      <div class="row">
                        <!-- Imagen #1 -->
                          <div class="col-md-6 col-lg-4 mb-5">
-                            <img class=" rounded img-fluid" src="img/galeria/g1.png" alt="" />
+                            <img class=" rounded img-fluid" src="Img/galeria/g1.png" alt="" />
                          </div>
                       <!-- Imagen #2 -->
                          <div class="col-md-6 col-lg-4 mb-5">
-                            <img class="rounded img-fluid" src="img/galeria/g2.png" alt="" />
+                            <img class="rounded img-fluid" src="Img/galeria/g2.png" alt="" />
                          </div>
                       <!-- Imagen #3 -->
                          <div class="col-md-6 col-lg-4 mb-5">
-                            <img class=" rounded img-fluid" src="img/galeria/g3.png" alt="" />
+                            <img class=" rounded img-fluid" src="Img/galeria/g3.png" alt="" />
                          </div>
                       <!-- Imagen #4 -->
                          <div class="col-md-6 col-lg-4 mb-5">
-                            <img class="rounded img-fluid" src="img/galeria/g4.png" alt="" />
+                            <img class="rounded img-fluid" src="Img/galeria/g4.png" alt="" />
                          </div>
                       <!-- Imagen #5 -->
                          <div class="col-md-6 col-lg-4 mb-5">
-                            <img class=" rounded img-fluid" src="img/galeria/g5.png" alt="" />
+                            <img class=" rounded img-fluid" src="Img/galeria/g5.png" alt="" />
                          </div>
                       <!-- Imagen #6 -->
                          <div class="col-md-6 col-lg-4 mb-5">
-                            <img class=" rounded img-fluid" src="img/galeria/g6.png" alt="" />
+                            <img class=" rounded img-fluid" src="Img/galeria/g6.png" alt="" />
                          </div>
                       <!-- Imagen #7 -->
                           <div class="col-md-6 col-lg-4 mb-5">
-                          <img class=" rounded img-fluid" src="img/galeria/g7.png" alt="" />
+                          <img class=" rounded img-fluid" src="Img/galeria/g7.png" alt="" />
                           </div>
                       <!-- Imagen #8 -->
                            <div class="col-md-6 col-lg-4 mb-5">
-                           <img class=" rounded img-fluid" src="img/galeria/g8.png" alt="" />
+                           <img class=" rounded img-fluid" src="Img/galeria/g8.png" alt="" />
                            </div>
                       <!-- Imagen #9 -->
                            <div class="col-md-6 col-lg-4 mb-5">
-                           <img class=" rounded img-fluid" src="img/galeria/g6.png" alt="" />
+                           <img class=" rounded img-fluid" src="Img/galeria/g6.png" alt="" />
                            </div>
 
                       <!-- Video 1 -->
