--- a/empresa.html
+++ b/empresa.html
@@ -21,7 +21,7 @@
   <!-- Inicio barra de Navegacion-->
           <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
               <div class="container">
-                  <a class="navbar-brand js-scroll-trigger" href="index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+                  <a class="navbar-brand js-scroll-trigger" href="Index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                   <div class="collapse navbar-collapse" id="navbarResponsive">
                       <ul class="navbar-nav ml-auto">
                           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="empresa.html">Empresa</a></li>
@@ -34,7 +34,7 @@
           </nav> <!-- Fin barra de Navegacion -->
        <header class="masthead bg-primary text-white text-center"> <!-- Inicio Header-->
            <div class="container d-flex align-items-center flex-column">
-<!-- Logo --><img class="masthead-avatar mb-5" src="img/logo.png" alt="" /><!-- logo -->
+<!-- Logo --><img class="masthead-avatar mb-5" src="Img/logo.png" alt="" /><!-- logo -->
                <!-- Icono Divider-->
                <div class="divider-custom divider-light">
                    <div class="divider-custom-line"></div>
@@ -135,13 +135,13 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
   <!-- Inicio Iconos Flotante -->
          <div class="btn-whatsapp">
          <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-         <img src="img/Wp.png" alt="">
+         <img src="Img/Wp.png" alt="">
          </a>
          </div>
 
          <div class="btn-wp">
          <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-         <img src="img/mess.png" alt="">
+         <img src="Img/mess.png" alt="">
          </a>
          </div><!-- Fin Iconos Florentes  -->
          <footer class="footer text-center"> <!-- Inicio Footer-->
