--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="img/auto.ico" />
+  <link rel="icon" type="Image/x-icon" href="Img/auto.ico" />
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
        <!-- Google fonts-->
        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -23,7 +23,7 @@
 <!-- Inicio barra de Navegacion-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+                <a class="navbar-brand js-scroll-trigger" href="Index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="empresa.html">Empresa</a></li>
@@ -37,7 +37,7 @@
 <!-- ******************************************* Fin Header ***************************************************-->
        <header class="masthead bg-primary text-white text-center">
            <div class="container d-flex align-items-center flex-column">
-<!-- Logo --><img class="masthead-avatar mb-5" src="img/logo.png" alt="" /><!-- logo -->
+<!-- Logo --><img class="masthead-avatar mb-5" src="Img/logo.png" alt="" /><!-- logo -->
                <!-- Icono Divider-->
                <div class="divider-custom divider-light">
                    <div class="divider-custom-line"></div>
@@ -59,9 +59,9 @@
                                 <p class="serv text-justify">Limpieza exterior con aplicación de agua, champú con cera auto brillante y uso de guante y paños de microfibra para limpieza externa, de llantas y rines. Aspirado y limpieza de tapetes, sillas e interior del carro.</a>
                                 </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s1.png" alt="" />
+                          <img class="img-fluid" src="Img/servicios/s1.png" alt="" />
                       </div>
-                      <img class="img-fluid" src="img/pre.png" alt="" />
+                      <img class="img-fluid" src="Img/pre.png" alt="" />
 
                   </div>
                   <!-- Servicio #2 -->
@@ -73,7 +73,7 @@
                                 <p class="serv text-justify">Servicio de Lavado Completo, con aplicación de Cera Siempre Nuevo, para dar a tu vehículo el brillo perfecto.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s2.png" alt="" />
+                          <img class="img-fluid" src="Img/servicios/s2.png" alt="" />
                       </div>
                   </div>
                   <!-- Servicio #3-->
@@ -85,7 +85,7 @@
                                 <p class="serv text-justify">Servicio de Lavado Completo, con aplicación de Polichado y rubbing para sacar los micro rayones, proteger la pintura y dar  brillo.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s3.png" alt="" />
+                          <img class="img-fluid" src="Img/servicios/s3.png" alt="" />
                       </div>
                   </div>
                   <!-- Servicio #4-->
@@ -97,7 +97,7 @@
                                 <p class="serv text-justify">  Servicio de Lavado Completo,  con aplicación de cera Súper Poly Brillo Espejo, cuya tecnología permite un brillo reflectivo y de larga duración. </a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s4.png" alt="" />
+                          <img class="img-fluid" src="Img/servicios/s4.png" alt="" />
                       </div>
                   </div>
                   <!-- Servicio #5-->
@@ -109,7 +109,7 @@
                                 <p class="serv text-justify"> Servicio de Lavado Completo, con aplicación de ceras que limpian, humectan, protegen y conservan el cuero de la cojinería.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/Servicios/s5.png" alt="" />
+                          <img class="img-fluid" src="Img/Servicios/s5.png" alt="" />
                       </div>
                   </div>
                   <!-- Servicio #6-->
@@ -121,7 +121,7 @@
                                 <p class="serv text-justify"> Servicio de Lavado Completo,  con aplicación de líquidos que limpian y remueven las manchas de la tapicería, preservando la cojinería de tela.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s6.png" alt="" />
+                          <img class="img-fluid" src="Img/servicios/s6.png" alt="" />
                       </div>
                   </div>
                   <!-- columna vacia -->
@@ -138,7 +138,7 @@
                                 <p class="serv text-justify"> Servicio de Lavado Completo, se provee el desmanchado interior del vehículo, en carteras, timón, tablero y techo.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s7.png" alt="" />
+                          <img class="img-fluid" src="Img/servicios/s7.png" alt="" />
                       </div>
                   </div>
 
@@ -154,13 +154,13 @@
 <!-- ******************************************* Inicio Iconos Flotante ***************************************************-->
        <div class="btn-whatsapp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/Wp.png" alt="">
+       <img src="Img/Wp.png" alt="">
        </a>
        </div>
 
        <div class="btn-wp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/mess.png" alt="">
+       <img src="Img/mess.png" alt="">
        </a>
        </div>
 <!-- ******************************************* Inicio Iconos Flotante ***************************************************-->
