--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="img/auto.ico" />
+  <link rel="icon" type="image/x-icon" href="Img/auto.ico" />
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
        <!-- Google fonts-->
        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
