--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
         </nav><!-- Fin barra de Navegacion-->
        <header class="masthead bg-primary text-white text-center"> <!-- Inicio Header-->
            <div class="container d-flex align-items-center flex-column">
-<!-- Logo --><img class="masthead-avatar mb-2" src="img/logo.png" alt="" /> <!-- logo -->
+<!-- Logo --><img class="masthead-avatar mb-2" src="Img/logo.png" alt="" /> <!-- logo -->
                <div class="divider-custom divider-light">
                    <div class="divider-custom-line"></div>
                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
@@ -66,14 +66,14 @@
            <div class="col-md-6"> <!-- Inicio columna lavado convencional -->
         <h3 align="center"> Lavado Convencional</h3>
         <br>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Tiempos de espera prolongados. </p>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Desplazamientos. </p>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Largas filas. </p>
-<p style="text-align: justify;"><img src="img/auto.svg" alt="" width="40" height="40"/> Gasto de agua descomunal (150 Litros  promedio día). </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Tiempos de espera prolongados. </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Desplazamientos. </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Largas filas. </p>
+<p style="text-align: justify;"><img src="Img/auto.svg" alt="" width="40" height="40"/> Gasto de agua descomunal (150 Litros  promedio día). </p>
 </div> <!-- Fin columna lavado convencional -->
          </div>
          <br>
-           <img class="info mb-5" src="img/Info1.png" alt=""/>
+           <img class="info mb-5" src="Img/Info1.png" alt=""/>
        </div> <!-- Fin columna central -->
        <div class="col-md-1">
        <!-- Columna vacia -->
@@ -83,13 +83,13 @@
 <!-- Inicio Iconos Flotante -->
        <div class="btn-whatsapp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/Wp.png" alt="">
+       <img src="Img/Wp.png" alt="">
        </a>
        </div>
 
        <div class="btn-wp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/mess.png" alt="">
+       <img src="Img/mess.png" alt="">
        </a>
        </div>
 <!-- Fin Iconos Florentes -->
