--- a/contacto.html
+++ b/contacto.html
@@ -88,13 +88,13 @@
 
        <div class="btn-whatsapp"> <!-- Inicio Iconos Flotante -->
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/Wp.png" alt="">
+       <img src="Img/Wp.png" alt="">
        </a>
        </div>
 
        <div class="btn-wp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/mess.png" alt="">
+       <img src="Img/mess.png" alt="">
        </a>
        </div> <!-- Fin Iconos Florentes -->
        <!-- Inicio Footer-->
