--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="Ismg/auto.ico" />
+  <link rel="icon" type="image/x-icon" href="Img/auto.ico" />
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
        <!-- Google fonts-->
        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -18,7 +18,6 @@
   <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
-<!-- *******************************************  Empieza el Contenido *********************************************-->
 <!-- Inicio barra de Navegacion-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
@@ -42,13 +41,12 @@
                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                    <div class="divider-custom-line"></div>
                </div>
-               <!-- Masthead Subheading-->
                <p class="masthead-subheading font-weight-light mb-0"> Contactanos </p>
            </div>
        </header> <!-- Fin Header -->
               <section class="page-section" id="contact">
                   <div class="container border rounded">
-                      <!-- Contact Section Form-->
+                      <!-- Form Contacto -->
                       <div class="row">
                           <div class="col-lg-8 mx-auto">
                               <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
