--- a/contacto.html
+++ b/contacto.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es" dir="ltr">
 <head>
-<title> Galeria</title>
+<title> Contacto</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
@@ -86,8 +86,8 @@
               </section>
 
        <div class="btn-whatsapp"> <!-- Inicio Iconos Flotante -->
-       <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="Img/Wp.png" alt="">
+       <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Hola!" target="_blank">
+       <img src="Img/Wp.png" alt=""> hola
        </a>
        </div>
 
