--- a/servicios.html
+++ b/servicios.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="es" dir="ltr">
 <head>
-<title> Servicios</title>
+<title> Servicios </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="img/auto.ico" />
+  <link rel="icon" type="image/x-icon" href="Img/auto.ico" />
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
        <!-- Google fonts-->
        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -19,7 +19,6 @@
 
 </head>
 <body>
-<!-- *******************************************  Empieza el Contenido *********************************************-->
 <!-- Inicio barra de Navegacion-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
@@ -34,8 +33,7 @@
                 </div>
             </div>
         </nav> <!-- Fin barra de Navegacion-->
-<!-- ******************************************* Fin Header ***************************************************-->
-       <header class="masthead bg-primary text-white text-center">
+       <header class="masthead bg-primary text-white text-center"> <!-- Inicio Header -->
            <div class="container d-flex align-items-center flex-column">
 <!-- Logo --><img class="masthead-avatar mb-5" src="img/logo.png" alt="" /><!-- logo -->
                <!-- Icono Divider-->
@@ -46,8 +44,8 @@
                </div> <!-- Masthead Subheading-->
                <p class="masthead-subheading font-weight-light mb-0"> Nuestros Servicios </p>
            </div>
-       </header> <!-- ******************************************* Fin Header ***************************************************-->
-<section class="page-section portfolio" id="portfolio"> <!-- Seccion Servicios -->
+       </header> <!-- Fin Header -->
+<section class="page-section portfolio" id="portfolio"> <!-- Inicio Seccion Servicios -->
           <div class="container">
               <div class="row"> <!-- Inicio fila -->
                 <!-- Servicio #1 -->
@@ -59,10 +57,9 @@
                                 <p class="serv text-justify">Limpieza exterior con aplicación de agua, champú con cera auto brillante y uso de guante y paños de microfibra para limpieza externa, de llantas y rines. Aspirado y limpieza de tapetes, sillas e interior del carro.</a>
                                 </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s1.png" alt="" />
+                     <!-- Imagen --> <img class="img-fluid" src="Img/servicios/s1.png" alt="" />
                       </div>
-                      <img class="img-fluid" src="img/pre.png" alt="" />
-
+                     <!-- Imagen --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- Servicio #2 -->
                   <div class="col-md-6 col-lg-4 mb-5">
@@ -73,8 +70,9 @@
                                 <p class="serv text-justify">Servicio de Lavado Completo, con aplicación de Cera Siempre Nuevo, para dar a tu vehículo el brillo perfecto.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s2.png" alt="" />
+                      <!-- Imagen --> <img class="img-fluid" src="img/servicios/s2.png" alt="" />
                       </div>
+               <!-- Imagen --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- Servicio #3-->
                   <div class="col-md-6 col-lg-4 mb-5">
@@ -85,8 +83,9 @@
                                 <p class="serv text-justify">Servicio de Lavado Completo, con aplicación de Polichado y rubbing para sacar los micro rayones, proteger la pintura y dar  brillo.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s3.png" alt="" />
+                    <!-- Imagen --> <img class="img-fluid" src="img/servicios/s3.png" alt="" />
                       </div>
+     <!-- Imagen --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- Servicio #4-->
                   <div class="col-md-6 col-lg-4 mb-5">
