--- a/servicios.html
+++ b/servicios.html
@@ -70,9 +70,9 @@
                                 <p class="serv text-justify">Servicio de Lavado Completo, con aplicación de Cera Siempre Nuevo, para dar a tu vehículo el brillo perfecto.</a>
                               </div>
                           </div>
-                      <!-- Imagen --> <img class="img-fluid" src="img/servicios/s2.png" alt="" />
+                <!-- Imagen --> <img class="img-fluid" src="img/servicios/s2.png" alt="" />
                       </div>
-               <!-- Imagen --> <img class="img-fluid" src="Img/pre.png" alt="" />
+               <!-- precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- Servicio #3-->
                   <div class="col-md-6 col-lg-4 mb-5">
@@ -83,9 +83,9 @@
                                 <p class="serv text-justify">Servicio de Lavado Completo, con aplicación de Polichado y rubbing para sacar los micro rayones, proteger la pintura y dar  brillo.</a>
                               </div>
                           </div>
-                    <!-- Imagen --> <img class="img-fluid" src="img/servicios/s3.png" alt="" />
+                <!-- Imagen --> <img class="img-fluid" src="img/servicios/s3.png" alt="" />
                       </div>
-     <!-- Imagen --> <img class="img-fluid" src="Img/pre.png" alt="" />
+                <!-- precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- Servicio #4-->
                   <div class="col-md-6 col-lg-4 mb-5">
@@ -96,8 +96,9 @@
                                 <p class="serv text-justify">  Servicio de Lavado Completo,  con aplicación de cera Súper Poly Brillo Espejo, cuya tecnología permite un brillo reflectivo y de larga duración. </a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s4.png" alt="" />
+            <!-- Imagen -->         <img class="img-fluid" src="img/servicios/s4.png" alt="" />
                       </div>
+            <!-- Precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- Servicio #5-->
                   <div class="col-md-6 col-lg-4 mb-5">
