--- a/servicios.html
+++ b/servicios.html
@@ -96,7 +96,7 @@
                                 <p class="serv text-justify">  Servicio de Lavado Completo,  con aplicación de cera Súper Poly Brillo Espejo, cuya tecnología permite un brillo reflectivo y de larga duración. </a>
                               </div>
                           </div>
-            <!-- Imagen -->         <img class="img-fluid" src="img/servicios/s4.png" alt="" />
+            <!-- Imagen --> <img class="img-fluid" src="img/servicios/s4.png" alt="" />
                       </div>
             <!-- Precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
@@ -109,8 +109,9 @@
                                 <p class="serv text-justify"> Servicio de Lavado Completo, con aplicación de ceras que limpian, humectan, protegen y conservan el cuero de la cojinería.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/Servicios/s5.png" alt="" />
+            <!-- Imagen --> <img class="img-fluid" src="img/Servicios/s5.png" alt="" />
                       </div>
+            <!-- Precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- Servicio #6-->
                   <div class="col-md-6 col-lg-4 mb-5">
@@ -121,8 +122,9 @@
                                 <p class="serv text-justify"> Servicio de Lavado Completo,  con aplicación de líquidos que limpian y remueven las manchas de la tapicería, preservando la cojinería de tela.</a>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/servicios/s6.png" alt="" />
+            <!--Imagen --> <img class="img-fluid" src="img/servicios/s6.png" alt="" />
                       </div>
+            <!-- Precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
                   <!-- columna vacia -->
                   <div class="col-md-6 col-lg-4 mb-5">
