--- a/servicios.html
+++ b/servicios.html
@@ -142,32 +142,25 @@
                           </div>
                           <img class="img-fluid" src="img/servicios/s7.png" alt="" />
                       </div>
+            <!-- Precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
 
           </div> <!-- Fin Fila -->
       </section>
 
-
-
-
-
-
-
-<!-- ******************************************* Inicio Iconos Flotante ***************************************************-->
+<!-- Inicio Iconos Flotante-->s
        <div class="btn-whatsapp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/Wp.png" alt="">
+       <img src="Img/Wp.png" alt="">
        </a>
        </div>
 
        <div class="btn-wp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
-       <img src="img/mess.png" alt="">
+       <img src="Img/mess.png" alt="">
        </a>
-       </div>
-<!-- ******************************************* Inicio Iconos Flotante ***************************************************-->
-       <!-- Inicio Footer-->
-              <footer class="footer text-center">
+       </div><!-- Fin Iconos Flotante -->
+          <footer class="footer text-center">  <!-- Inicio Footer-->
                   <div class="container">
                       <div class="row">
                           <!-- Footer Ubicacion-->
