--- a/empresa.html
+++ b/empresa.html
@@ -160,11 +160,10 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
                            <i class="fab fa-fw fa-instagram"></i></a>
                      </div>
                      <div class="col-lg-4">
-                         <h4 class="text-uppercase mb-4"> Visitas </h4>
-                         <div id="sfc19kz1sqye43nyz9aujcxsbutt1x15w9g"></div>
-            <script type="text/javascript" src="https://counter11.stat.ovh/private/counter.js?c=19kz1sqye43nyz9aujcxsbutt1x15w9g&down=async" async></script> <noscript>
-              <a href="https://www.contadorvisitasgratis.com" title="contador de paginas web"><img src="https://counter11.stat.ovh/private/contadorvisitasgratis.php?c=19kz1sqye43nyz9aujcxsbutt1x15w9g" border="0" title="contador de paginas web" alt="contador de paginas web"></a></noscript>
-                          <!-- opcion mensaje ambinetal <p class="lead mb-0">La conservación es un estado de armonía entre hombre y tierra <br><a>Aldo Leopold</a></p> -->
+                           <div class="col-lg-4"> 
+                              <h4 class="text-uppercase mb-4"> Nota Verde </h4>
+                              <p class="lead mb-0">La conservación es un estado de armonía entre hombre y tierra <br><a>Aldo Leopold</a></p>
+                          </div>
                      </div>
                  </div>
              </div>
