--- a/servicios.html
+++ b/servicios.html
@@ -122,7 +122,7 @@
                                 <p class="serv text-justify"> Servicio de Lavado Completo,  con aplicación de líquidos que limpian y remueven las manchas de la tapicería, preservando la cojinería de tela.</a>
                               </div>
                           </div>
-            <!--Imagen --> <img class="img-fluid" src="img/servicios/s6.png" alt="" />
+            <!--Imagen --> <img class="img-fluid" src="Img/servicios/s6.png" alt="" />
                       </div>
             <!-- Precios --> <img class="img-fluid" src="Img/pre.png" alt="" />
                   </div>
@@ -177,8 +177,7 @@
                               <a class="btn btn-outline-light btn-social mx-1" href="">
                                 <i class="fab fa-fw fa-instagram"></i></a>
                           </div>
-                          <!-- Footer Mensaje-->
-                          <div class="col-lg-4">
+                          <div class="col-lg-4"> 
                               <h4 class="text-uppercase mb-4"> Nota Verde </h4>
                               <p class="lead mb-0">La conservación es un estado de armonía entre hombre y tierra <br><a>Aldo Leopold</a></p>
                           </div>
