--- a/servicios.html
+++ b/servicios.html
@@ -150,7 +150,7 @@
 
 <!-- Inicio Iconos Flotante-->s
        <div class="btn-whatsapp">
-       <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
+       <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
        <img src="Img/Wp.png" alt="">
        </a>
        </div>
