--- a/empresa.html
+++ b/empresa.html
@@ -134,7 +134,7 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
           </div> <!-- Fin Container -->
   <!-- Inicio Iconos Flotante -->
          <div class="btn-whatsapp">
-         <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
+         <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
          <img src="img/Wp.png" alt="">
          </a>
          </div>
@@ -175,9 +175,7 @@ a través del ahorro de agua y el uso de productos amigables con el ambiente.</p
          <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
          <div class="scroll-to-top d-lg-none position-fixed">
              <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
-         </div>
-<!-- Fin Footer -->
-  <!-- *******************************************  Termina el Contenido *********************************************-->
+         </div><!-- Fin Footer -->
   <!-- Bootstrap core JS-->
          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
