--- a/contacto.html
+++ b/contacto.html
@@ -86,7 +86,7 @@
               </section>
 
        <div class="btn-whatsapp"> <!-- Inicio Iconos Flotante -->
-       <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Hola! Quiero mas información a cerca de sus servicios" target="_blank">
+       <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
        <img src="Img/Wp.png" alt=""> hola
        </a>
        </div>
