--- a/galeria.html
+++ b/galeria.html
@@ -104,22 +104,15 @@
 </div>
 </section>
 
-
-
-
-
 <!-- Inicio Iconos Flotante -->
        <div class="btn-whatsapp">
-       <a href="https://api.whatsapp.com/send?pho
-
-
-       ne=+57 3204661340" target="_blank">
+       <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
        <img src="img/Wp.png" alt="">
        </a>
        </div>
 
        <div class="btn-wp">
-       <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
+       <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
        <img src="img/mess.png" alt="">
        </a>
        </div>
