--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,7 @@
    </div> <!-- Fin Contenedor -->
 <!-- Inicio Iconos Flotante -->
        <div class="btn-whatsapp">
-       <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
+       <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
        <img src="img/Wp.png" alt="">
        </a>
        </div>
