--- a/empresa.html
+++ b/empresa.html
@@ -34,7 +34,7 @@
           </nav> <!-- Fin barra de Navegacion -->
        <header class="masthead bg-primary text-white text-center"> <!-- Inicio Header-->
            <div class="container d-flex align-items-center flex-column">
-<!-- Logo --><img class="masthead-avatar mb-2" src="img/logo.png" alt="" /><!-- logo -->
+<!-- Logo --><img class="masthead-avatar mb-2" src="Img/logo.png" alt="" /><!-- logo -->
                <!-- Icono Divider-->
                <div class="divider-custom divider-light">
                    <div class="divider-custom-line"></div>
