--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="img/auto.ico" />
+  <link rel="icon" type="image/x-icon" href="Img/auto.ico" />
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
        <!-- Google fonts-->
        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -34,7 +34,7 @@
         </nav> <!-- Fin barra de Navegacion-->
        <header class="masthead bg-primary text-white text-center"> <!-- Inicio Header-->
            <div class="container d-flex align-items-center flex-column">
-<!-- Logo --><img class="masthead-avatar mb-2" src="img/logo.png" alt="" /><!-- logo -->
+<!-- Logo --><img class="masthead-avatar mb-2" src="Img/logo.png" alt="" /><!-- logo -->
                <!-- Icono Divider-->
                <div class="divider-custom divider-light">
                    <div class="divider-custom-line"></div>
