--- a/galeria.html
+++ b/galeria.html
@@ -18,9 +18,7 @@
   <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
-<!-- *******************************************  Empieza el Contenido *********************************************-->
-<!-- Inicio barra de Navegacion-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav"> <!-- Inicio barra de Navegacion-->
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -86,7 +84,6 @@
                            <div class="col-md-6 col-lg-4 mb-5">
                            <img class=" rounded img-fluid" src="img/galeria/g6.png" alt="" />
                            </div>
-
                       <!-- Video 1 -->
                           <div class="col-md-6 col-lg-4 mb-5">
                           <iframe class="rounded vid" src="https://www.youtube.com/embed/K_StPzAItdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -102,32 +99,25 @@
                           </div>
                        </div>
 </div>
-</section>
-
-<!-- Inicio Iconos Flotante -->
-       <div class="btn-whatsapp">
+</section> <!-- Fin Seccion Servicios -->
+       <div class="btn-whatsapp"> <!-- Inicio Iconos Flotante -->
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340" target="_blank">
        <img src="img/Wp.png" alt="">
        </a>
        </div>
-
        <div class="btn-wp">
        <a href="https://api.whatsapp.com/send?phone=+57 3204661340&text=Quiero mas información a cerca de sus servicios" target="_blank">
        <img src="img/mess.png" alt="">
        </a>
-       </div>
-<!-- Fin Iconos Florentes -->
-       <!-- Inicio Footer-->
-              <footer class="footer text-center">
+       </div><!-- Fin Iconos Florentes -->
+          <footer class="footer text-center">  <!-- Inicio Footer-->
                   <div class="container">
                       <div class="row">
-                          <!-- Footer Ubicacion-->
-                          <div class="col-lg-4 mb-5 mb-lg-0">
+                          <div class="col-lg-4 mb-5 mb-lg-0">  <!-- Footer Ubicacion-->
                               <h4 class="text-uppercase mb-4">Ubicacion</h4>
                               <p class="lead mb-0">Servicio a Domicilio<br />Bogota Dc</p>
-                          </div>
-                          <!-- Footer Redes Sociales-->
-                          <div class="col-lg-4 mb-5 mb-lg-0">
+                          </div> 
+                          <div class="col-lg-4 mb-5 mb-lg-0"> <!-- Footer Redes Sociales-->
                               <h4 class="text-uppercase mb-4">Redes Sociales</h4>
                               <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/Easy-car-wash-Autolavado-Ecologico-1649310455287561">
                                 <i class="fab fa-fw fa-facebook-f"></i></a>
@@ -135,26 +125,21 @@
                               <a class="btn btn-outline-light btn-social mx-1" href="">
                                 <i class="fab fa-fw fa-instagram"></i></a>
                           </div>
-                          <!-- Footer Mensaje-->
-                          <div class="col-lg-4">
+                          <div class="col-lg-4"> <!-- Footer Mensaje-->
                               <h4 class="text-uppercase mb-4"> Nota Verde </h4>
                               <p class="lead mb-0">La conservación es un estado de armonía entre hombre y tierra <br><a>Aldo Leopold</a></p>
                           </div>
                       </div>
                   </div>
               </footer>
-              <!-- Seccion Copyright-->
-              <div class="copyright py-4 text-center text-white">
+              <div class="copyright py-4 text-center text-white">  <!-- Seccion Copyright-->
                   <div class="container"><small>Copyright © Famorag</small></div>
               </div>
               <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
               <div class="scroll-to-top d-lg-none position-fixed">
                   <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
-              </div>
-<!-- Fin Footer -->
-<!-- *******************************************  Termina el Contenido *********************************************-->
-<!-- Bootstrap core JS-->
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+              </div> <!-- Fin Footer -->
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- Bootstrap core JS-->
        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
        <!-- Third party plugin JS-->
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
@@ -164,5 +149,4 @@
        <!-- Core theme JS-->
        <script src="js/scripts.js"></script>
 </body>
-
 </html>
