--- a/contacto.html
+++ b/contacto.html
@@ -18,8 +18,7 @@
   <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
-<!-- Inicio barra de Navegacion-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav"> <!-- Inicio barra de Navegacion-->s
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="index.html"> Inicio </a><button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -46,8 +45,7 @@
            </div>
        </header> <!-- Fin Header -->
               <section class="page-section" id="contact">
-                  <div class="container border rounded">
-                      <!-- Contact Section Form-->
+                  <div class="container border rounded">          
                       <div class="row">
                           <div class="col-lg-8 mx-auto">
                               <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
